Generics_Extend_WildCard/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:13: error: non-static method <T>foo(Map<T,? extends T>) cannot be referenced from a static context
        List<Integer> ret = foo(m);
                            ^
  where T is a type-variable:
    T extends Object declared in method <T>foo(Map<T,? extends T>)
Code1.java:13: error: incompatible types: inferred type does not conform to equality constraint(s)
        List<Integer> ret = foo(m);
                               ^
    inferred: Integer
    equality constraints(s): Integer,Number
2 errors
 
========================= 
ExtendJ errors for Code1.java 
 
========================= 
Eclipse ECJ errors for Code1.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code1.java (at line 13)
	List<Integer> ret = foo(m);
	                    ^^^
Cannot make a static reference to the non-static method foo(Map<Number,? extends Number>) from the type Code1
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code1.java (at line 13)
	List<Integer> ret = foo(m);
	                    ^^^^^^
Type mismatch: cannot convert from List<Number> to List<Integer>
----------
2 problems (2 errors)
